# jaspy

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  jaspy.env  jaspy.env.example
nexus/: .gitignore  Cargo.toml  Dockerfile  Dockerfile_backup  README.md  entrypoint.sh
nexus/migrations/2018-08-13-163317_initial/: down.sql  up.sql
nexus/migrations/2018-09-30-132214_weathermap/: down.sql  up.sql
nexus/migrations/2018-10-15-182934_virtualconnection/: down.sql  up.sql
nexus/migrations/2018-10-24-193120_clientlocation/: down.sql  up.sql
nexus/migrations/2019-07-31-130727_add_version_and_type/: down.sql  up.sql
nexus/migrations/2019-08-02-083706_add_client_hwaddr/: down.sql  up.sql
nexus/migrations/2019-10-23-194731_unique_ipaddr_for_clientlocation/: down.sql  up.sql
nexus/src/: db.rs  main.rs  schema.rs
nexus/src/models/: dbo.rs  events.rs  internal.rs  json.rs  metrics.rs  mod.rs
nexus/src/routes/: clientlocation.rs  device.rs  discovery.rs  interface.rs  metrics.rs  mod.rs  v1.rs  weathermap.rs
nexus/src/routes/dev/: clientlocation.rs  device.rs  discovery.rs  interface.rs  metrics.rs  mod.rs  weathermap.rs
nexus/src/routes/v1/: device.rs
nexus/src/utilities/: cache.rs  imds.rs  imds.rs.save  mod.rs  msgbus.rs  tools.rs
snmptrapd-reader/: Cargo.toml  Dockerfile  LICENSE  README.md
snmptrapd-reader/src/: main.rs
snmptrapd-reader/src/models/: json.rs
snmptrapd-reader/test/: trap_example.txt
switchmaster/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  publish.ps1  switchmaster.sln
switchmaster/migrations/2019-02-25-203643_initial/: down.sql  up.sql
switchmaster/src/: main.rs  schema.rs
switchmaster/src/Jaspy.Switchmaster/: .gitignore  Jaspy.Switchmaster.csproj  NexusClient.cs  Program.cs  Startup.cs  SwitchmasterDbContext.cs  appsettings.Development.json  appsettings.json
switchmaster/src/Jaspy.Switchmaster/Attributes/: HttpSynchronizeAttribute.cs
switchmaster/src/Jaspy.Switchmaster/ClientApp/: README.md  package-lock.json  package.json
switchmaster/src/Jaspy.Switchmaster/Controllers/: SwitchController.cs
switchmaster/src/Jaspy.Switchmaster/Entities/: Switch.cs
switchmaster/src/Jaspy.Switchmaster/Hubs/: SwitchHub.cs
switchmaster/src/Jaspy.Switchmaster/Migrations/: 20190602175745_Initial.Designer.cs  20190602175745_Initial.cs  20190602192210_Add_Fqdn_As_Key.Designer.cs  20190602192210_Add_Fqdn_As_Key.cs  SwitchmasterDbContextModelSnapshot.cs
switchmaster/src/models/: mod.rs  switch.rs
switchmaster/src/repositories/: switch.rs
switchmaster/src/routes/: mod.rs  switches.rs
switchmaster/systemd/: jaspy-switchmaster.service
(+124 files in other folders)
