[package]
name = "jaspy-nexus"
version = "2.2.0"
authors = ["Antti Tönkyrä <daedalus@pingtimeout.net>"]
edition = "2018"


[dependencies]
config = "*"
dotenv = "*"
rocket = { git = "https://github.com/SergioBenitez/Rocket?rev=4e6a7ddd" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket?rev=4e6a7ddd" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
diesel = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
time = "*"
tokio = "*"
async-std = "*"
futures-util = "*"
rumq-client = "0.1.0-alpha.9"
