[package]
name = "jaspy-nexus"
version = "2.2.0"
authors = ["Antti Tönkyrä <daedalus@pingtimeout.net>"]
edition = "2018"


[dependencies]
config = "*"
dotenv = "*"
rocket = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
diesel = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
time = "*"
tokio = "*"
async-std = "*"
futures-util = "*"
rumq-client = "0.1.0-alpha.9"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["diesel_postgres_pool", "json"]
