[package]
name = "jaspy-snmptrapd-reader"
version = "2.2.0"
authors = ["Antti Tönkyrä <daedalus@pingtimeout.net>"]

[dependencies]
config = "0.10.1"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
nix = "0.15.0"
